welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:22: error: class Array takes type parameters
def reproduireMotif (T:Array, j:Int) {
                       ^Array1:12: error: not found: value T
	for (i <- 0 to T.length-1) {
                       ^